// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App should render correctly 1`] = `
<React.Fragment>
  <ForwardRef
    menuAction={[Function]}
  />
  <NavDrawer
    closeFunc={[Function]}
    isOpen={false}
  />
  <Route
    exact={true}
    path="/"
    render={[Function]}
  />
  <Route
    path="/about"
    render={[Function]}
  />
  <Route
    path="/faq"
    render={[Function]}
  />
  <Route
    path="/report"
    render={[Function]}
  />
  <Route
    path="/contact"
    render={[Function]}
  />
</React.Fragment>
`;

exports[`App should toggle navigation 1`] = `
<React.Fragment>
  <ForwardRef
    menuAction={[Function]}
  />
  <NavDrawer
    closeFunc={[Function]}
    isOpen={true}
  />
  <Route
    exact={true}
    path="/"
    render={[Function]}
  />
  <Route
    path="/about"
    render={[Function]}
  />
  <Route
    path="/faq"
    render={[Function]}
  />
  <Route
    path="/report"
    render={[Function]}
  />
  <Route
    path="/contact"
    render={[Function]}
  />
</React.Fragment>
`;
